<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_titulo_height"
        android:gravity="center"
        android:text="@string/registro_titulo"
        android:textSize="@dimen/letra_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/registro_text_height"
        android:text="@string/registro_nombre_usuario"
        android:textSize="@dimen/login_texto_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_titulo" />


    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_text_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/registro_text_height"
        android:text="@string/registro_contrasenia"
        android:textSize="@dimen/login_texto_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuario" />

    <EditText
        android:id="@+id/editText_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_text_height"
        android:ems="@integer/min_ems"
        android:inputType="textPassword"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_contrasenia"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/registro_text_height"
        android:text="@string/registro_nombre"
        android:textSize="@dimen/login_texto_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_contrasenia" />

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_text_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/registro_text_height"
        android:text="@string/registro_apellido"
        android:textSize="@dimen/login_texto_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nombre" />

    <EditText
        android:id="@+id/editText_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_text_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_apellido"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/registro_text_height"
        android:text="@string/registro_mail"
        android:textSize="@dimen/login_texto_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_apellido" />

    <EditText
        android:id="@+id/editText_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_text_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/registro_boton_width"
        android:layout_marginTop="@dimen/registro_boton_heigth"
        android:text="@string/registro_boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_mail"
        android:backgroundTint="@color/teal_700"/>


</androidx.constraintlayout.widget.ConstraintLayout>