<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editar_nombre_width"
        android:layout_marginTop="@dimen/editar_nombre_height"
        android:text="@string/editar_nombre"
        android:textSize="@dimen/editar_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editar_nombre_width"
        android:layout_marginTop="@dimen/editar_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editar_nombre_width"
        android:layout_marginTop="@dimen/editar_nombre_height"
        android:text="@string/editar_apellido"
        android:textSize="@dimen/editar_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editText_usuario" />

    <EditText
        android:id="@+id/editText_apelldio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editar_nombre_width"
        android:layout_marginTop="@dimen/editar_height"
        android:ems="@integer/min_ems"
        android:inputType="textPersonName"
        android:minHeight="@dimen/edit_text_min_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_apellido"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editar_boton_width"
        android:layout_marginTop="@dimen/editar_boton_height"
        android:backgroundTint="@color/teal_700"
        android:text="@string/boton_siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>