<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuraciones.ConfiguracionesActivity">


    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editar_informacion_titulo_height"
        android:text="@string/configuraciones_titulo"
        android:textSize="@dimen/editar_informacion_titulo_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_configuracion_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/configuracion_text_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        android:text="@string/configuraciones_ejemplo"
        android:textSize="@dimen/configuracion_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titulo" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="@dimen/configuracion_switch_widht"
        android:layout_height="@dimen/configuracion_switch_height"
        android:layout_marginStart="@dimen/configuracion_switch_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_titulo"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView_configuracion_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/configuracion_text_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        android:text="@string/configuraciones_ejemplo"
        android:textSize="@dimen/configuracion_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_configuracion_1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="@dimen/configuracion_switch_widht"
        android:layout_height="@dimen/configuracion_switch_height"
        android:layout_marginStart="@dimen/configuracion_switch_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_configuracion_1"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/textView_configuracion_notificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/configuracion_text_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        android:text="@string/configuraciones_notificacion"
        android:textSize="@dimen/configuracion_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_configuracion_2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notificaciones"
        android:layout_width="@dimen/configuracion_switch_widht"
        android:layout_height="@dimen/configuracion_switch_height"
        android:layout_marginStart="@dimen/configuracion_switch_margin_start"
        android:layout_marginTop="@dimen/configuracion_text_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/textView_configuracion_2"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>